--- a/Lesson3+HTML+CSS/index.html
+++ b/Lesson3+HTML+CSS/index.html
@@ -1,21 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>Flexbox</title>    
-  </head>
-
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
+    <title>Flexbox</title>
+</head>
+<body>
     <div class="container sizing">
-      <div class="flex-element box-1"> 1 </div>
-      <div class="flex-element box-2"> 2 </div>
-      <div class="flex-element box-3"> 3 </div>
-      <div class="flex-element box-4"> 4 </div>
-      <div class="flex-element box-5"> 5 </div>
-      <div class="flex-element box-6"> 6 </div>
+        <div class="flex-element box-1"> 
+            <div class="square">1</div>
+        </div>
+        <div class="flex-element box-2"> 
+            <div class="square">2</div>
+        </div>
+        <div class="flex-element box-3">
+            <div class="square">3</div>
+        </div>
+        <div class="flex-element box-4">
+            <div class="square">4</div>
+        </div>
+        <div class="flex-element box-5">
+            <div class="square">5</div>
+        </div>
+        <div class="flex-element box-6">
+            <div class="square">6</div>
+        </div>
+        <div class="flex-element box-3">
+            <div class="square">7</div>
+        </div>
+        <div class="flex-element box-4">
+            <div class="square">8</div>
+        </div>
+        <div class="flex-element box-5">
+            <div class="square">9</div>
+        </div>
+        <div class="flex-element box-6">
+            <div class="square">10</div>
+        </div>
+        <div class="flex-element box-3">
+            <div class="square">11</div>
+        </div>
+        <div class="flex-element box-4">
+            <div class="square">12</div>
+        </div>
+        <div class="flex-element box-5">
+            <div class="square">13</div>
+        </div>
+        <div class="flex-element box-6">
+            <div class="square">14</div>
+        </div>
     </div>
-  </body>
-
+    
+</body>
 </html>
+index.html
+main.css. На экране.
